2004-05-20  John ffitch  <jpff@codemist.co.uk>

	* H/csoundCore.h (ENVIRON_): type in instance was wrong (missing *)

	* H/csoundCore.h (ENVIRON_): 
	* H/cs.h (rtin_devs, rtout_devs): 
	* H/csdl.h (rtin_devs, rtout_devs): 
	* Engine/oload.c: Added rtin_devs and rtout_devs for device names
	rather than just numbers

2004-05-19  John ffitch  <jpff@codemist.co.uk>

	* Engine/entry1.c: Added "tablew" as a 0xfffe opcode

	* SConstruct (customSHLINKFLAGS): Darwin seems to need -dynamic

	* Top/dl_opcodes.c (dlsymIntern): SLOOKUPSYMBOLINIMAGE_OPTION_BIND
	-> NSLOOKUPSYMBOLINIMAGE_OPTION_BIND

2004-05-18  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/vdelayk.c (partial_maximum): Added maxk opcode

2004-05-17  John  <jpff@cage.codemist.co.uk>

	* SConstruct: Use -Wl,-Bdynamic as it is  linker option 

	* strings/makedb.c (main): Correct format in prontf twice for
	longs

	* Top/main.c (install_signal_handler): Retore signal handling

2004-05-17  John ffitch  <jpff@codemist.co.uk>

	* InOut/rtpa.c (playopen_): Allow selection of ALSA device via
	environment variable

	* Engine/entry1.c: Restored tablekt and tableikt

2004-05-16  Michael Gogins <gogins@pipeline.com>

	* frontends/CsoundVST/CsoundVstFltk.cpp: fixed problem
    with linefeeds in message lines.

2004-05-12  John ffitch  <jpff@codemist.co.uk>

	* SConstruct: Set makeDynamic=1 for linux

2004-05-09  Michael Gogins <gogins@pipeline.com>

	* Added high-level "C" API for CsoundVST
	(frontends/CsoundVST/csoundvst_api.h and .c). 

	* Fixed random number generator bug in CsoundVST::StrangeAttractor.

2004-05-07  Michael Gogins <gogins@pipeline.com>

	* Fixed some bugs in rtpa.c to enable lower-latency
        real-time audio.

2004-05-05  Michael Gogins <gogins@pipeline.com>

	* Fixed Fl_graph.cpp and widgets.cpp event handling with thread
	protection. FLTK widgets work now (at least on Windows).

2004-05-05  John ffitch  <jpff@codemist.co.uk>

	* strings/all_strings: 
	* strings/english-strings: Heavily revised
